3.3.0
 * Added JOYSTICK=A support.  Emufe will autodetect joysticks when
   this is enabled and re-set it to Y or N in memory accordingly 
 * Mouse pointer was off before on the Y-axis.  It's much closer now
   if not perfect
 * Got TrueType working again
 * Added Title text display for TT
 * Allowed assigning different fonts to BANR, DESC and MENU boxes
   (only in rcfile so far)  

3.2.0+
 * Rewrote configure.ac to support all three graphics libs; removed 
   Zaurus checks
 * Fixed Makefile.am's so that it compiles correctly
 * Working on SDL2 support function by function

3.1.5
 * Added working overlay capability, currently used to make it look like
   the screenshots are being displayed on a curved TV screen
 * Removed Widescreen (-W) support, wide screen is assumed now,
   eventually it will add black bars if the monitor is not the same
   aspect as the theme.  Note that 4:3 Themes can be created too, or
   any aspect.  So it's not really losing a feature, it's just removing
   overhead for supporting it.  At the time, the idea was that this
   code could target a Zauraus (640x480) or Nokia n900 (800x480) without
   bars on either.
 * Added do_imgbox_scale to perform upscaling (and downscaling) via
   SDL rather than my procedure.
 * Added stretch_blit() to sdl_allegro
 * add debug logging function
 * Added 80's arcade-styled bitmap font, set fontsize to 16x32 to
   activate
 * moved downscale_bm to sdl_allegro and ensured that it also
   upscales, but it gets the color wrong,  more reason to move
   to SDL2
 * created new MM (mask) parameter in rcfile, need to do OV
 * Fixed long-standing bug where the boxscan background bitmap disappears 
   after playing a game-- needed to load image from gthemedir, not
   picsdir
 * use stretch_blit instead of calling internal stretch procedure
   directly (should help when porting to SDL2)


3.1.4
 * Removed warnings
 * Fixed runtime issues on x86_64 (mostly by adding #include<string.h>

3.1.2